--- a/pandora-calculation/src/main/resources/application.properties
+++ b/pandora-calculation/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-integrator.method=dormand-prince
-integrator.nonstiff.params.minStep=1e-8
-integrator.nonstiff.params.maxStep=1
-integrator.nonstiff.params.absoluteTolerance=1e-10
-integrator.nonstiff.params.relativeTolerance=1e-10
+spring.config.name=application,integrator,physics-constraints
