PANDORA-100 add reactions to PANDORA including proof of concept

--- a/.gitignore
+++ b/.gitignore
@@ -565,3 +565,65 @@ mvnw.cmd
 /pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/ParticulateSpecieBean.html
 /pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/ParticulateSpecieBean.java.html
 /pandora-data/target/surefire-reports/2023-07-14T14-20-22_595-jvmRun1.dump
+/pandora-calculation/target/surefire-reports/2023-08-27T20-21-56_155-jvmRun1.dump
+/pandora-calculation/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations.CellTimestepServiceImplIntegrationTest.xml
+/pandora-calculation/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations.CellTimestepServiceImplTest.xml
+/pandora-calculation/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations.CellTimestepServiceImplIntegrationTest.txt
+/pandora-calculation/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations.CellTimestepServiceImplTest.txt
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractHashMapService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractHashMapService.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/Oxidation.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/Oxidation.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/OxidationDoc.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/OxidationDoc.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/Reaction.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/Reaction.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.reactions/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/ReactionConfigurationBeanServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/ReactionConfigurationBeanServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/SpecieConfigurationBeanServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/SpecieConfigurationBeanServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.services/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/DIC.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/DIC.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/DOC.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/DOC.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.config.species/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/ErosionLogicImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/ErosionLogicImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/ShearStressLogicImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/ShearStressLogicImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.logic/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraDifferentialEquations$PandoraDifferentialEquationsBuilder.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraDifferentialEquations.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraDifferentialEquations.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraTimestep$PandoraTimestepBuilder.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraTimestep.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/PandoraTimestep.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.objects/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/CellTimestepServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/CellTimestepServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/FirstOrderDifferentialEquationsServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/FirstOrderDifferentialEquationsServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/LocalDateTimeServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/LocalDateTimeServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/PandoraIntegratorServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/PandoraIntegratorServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/ReactionCalculationServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/ReactionCalculationServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/SpecieCalculationServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/SpecieCalculationServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.calculation.implementations/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/SedimentSpecieBean.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/SedimentSpecieBean.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/PandoraCalculation.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/PandoraCalculation.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.source.html
+/pandora-calculation/.factorypath
