--- a/pandora-calculation/src/main/resources/application.properties
+++ b/pandora-calculation/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.config.name=application,integrator,physics-constraints
+spring.config.name=application,integrator,physics-constraints,species
