--- a/pandora-data/pom.xml
+++ b/pandora-data/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-devtools</artifactId>
+    		<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
