--- a/pandora-web/pom.xml
+++ b/pandora-web/pom.xml
@@ -34,6 +34,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>nz.net.ultraq.thymeleaf</groupId>
+		    <artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.docker-java</groupId>
+		    <artifactId>docker-java</artifactId>
+		    <version>3.3.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.docker-java</groupId>
+		    <artifactId>docker-java-transport-httpclient5</artifactId>
+		    <version>3.3.3</version>
+		</dependency>
+			
 	</dependencies>
   	<build>
 		<plugins>
