--- a/pandora-data/pom.xml
+++ b/pandora-data/pom.xml
@@ -41,6 +41,10 @@
     		<artifactId>spring-boot-devtools</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>		
 	</dependencies>
 	
 	<build>
