--- a/pandora-web/src/main/resources/application.properties
+++ b/pandora-web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9000
+
 spring.devtools.restart.enabled=true
 spring.resources.static-locations=classpath:/static/
 
@@ -5,8 +7,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
-logging.level.org.thymeleaf=DEBUG
-logging.level.org.springframework=DEBUG
 
 docker.host=npipe:////./pipe/docker_engine
 docker.http.client.connections.max=5
