--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.science.earth.biogeochemistry.freshwaters</groupId>
 	<artifactId>PANDORA</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<modules>
-        <module>pandora-data</module>
-        <module>pandora-web</module>
-        <module>pandora-calculation</module>
+		<module>pandora-data</module>
+		<module>pandora-web</module>
+		<module>pandora-calculation</module>
 	</modules>
 
-    <packaging>pom</packaging>
+	<packaging>pom</packaging>
 
-    <name>pandora</name>
-    <description>PANDORA - Crack the Box: Understanding Riverine Chemistry</description>
+	<name>pandora</name>
+	<description>PANDORA - Crack the Box: Understanding Riverine Chemistry</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -28,31 +29,45 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
+	<repositories>
+  		<repository>
+          <id>github</id>
+          <url>https://maven.pkg.github.com/WJ-van-Hoek/utils</url>
+   		</repository>
+	</repositories>
 
 	<dependencies>
-	    <!-- Spring Boot Starter -->
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter</artifactId>
-	        <exclusions>
-	            <exclusion>
-	                <groupId>org.springframework.boot</groupId>
-	                <artifactId>spring-boot-starter-logging</artifactId>
-	            </exclusion>
-	        </exclusions>	        
-	    </dependency>
+		<!-- Spring Boot Starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
-	    <!-- Include Log4j 2 -->
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-log4j2</artifactId>
-	    </dependency>
-	
+		<!-- Include Log4j 2 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>com.general.utils</groupId>
+			<artifactId>docker-services</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
@@ -69,7 +84,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		    <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>3.1.1</version>
@@ -78,15 +93,15 @@
 						<id>checkstyle-validation</id>
 						<phase>validate</phase>
 						<goals>
-						  <goal>check</goal>
+							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
- 				<configuration>
-				<!-- Checkstyle configuration options -->
+				<configuration>
+					<!-- Checkstyle configuration options -->
 					<failOnViolation>false</failOnViolation>
 				</configuration>
-		    </plugin>
+			</plugin>
 		</plugins>
 	</build>
 
