--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ version: 2.1
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build:
+
     docker:
       - image: cimg/openjdk:17.0
     
@@ -14,7 +15,7 @@ jobs:
 
     steps:
       - checkout
-      - run: mvn -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
+      - run: mvn -s .circleci/settings.xml -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
       - run: bash <(curl -s https://codecov.io/bash)
 
       - store_test_results:
