--- a/pandora-calculation/Dockerfile
+++ b/pandora-calculation/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official OpenJDK base image
-FROM openjdk:17
+FROM openjdk:17-jdk-slim
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY target/pandora-calculation-0.0.1-SNAPSHOT.jar /app/pandora-calculation-0.0.1-SNAPSHOT.jar
 
 # Expose the port that your Spring Boot application listens on (default is 8080)
-EXPOSE 8080
+EXPOSE 9001
 
 # Define the command to run your Spring Boot application
 CMD ["java", "-jar", "pandora-calculation-0.0.1-SNAPSHOT.jar"]
