--- a/pandora-data/Dockerfile
+++ b/pandora-data/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official OpenJDK base image
-FROM openjdk:17
+FROM openjdk:17-jdk-slim
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY target/pandora-data-0.0.1-SNAPSHOT.jar /app/pandora-data-0.0.1-SNAPSHOT.jar
 
 # Expose the port that your Spring Boot application listens on (default is 8080)
-EXPOSE 9000
+EXPOSE 9002
 
 # Define the command to run your Spring Boot application
 CMD ["java", "-jar", "pandora-data-0.0.1-SNAPSHOT.jar"]
