add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -738,3 +738,19 @@ mvnw.cmd
 /pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.source.html
 /pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/CellDBEntityCrudServiceImpl.html
 /pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/CellDBEntityCrudServiceImpl.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/DatabasesServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/IndexController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/ReportsServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.source.html
+/bash/release/buildImages.sh
+/pandora-calculation/target/surefire-reports/2023-11-04T15-25-03_487-jvmRun1.dump
+/pandora-data/target/classes/application.properties
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services/DockerServiceImpl.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services/DockerServiceImpl.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services/index.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services/index.source.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/AppConfig$1.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/AppConfig.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.source.html
