--- a/.gitignore
+++ b/.gitignore
@@ -754,3 +754,26 @@ mvnw.cmd
 /pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/AppConfig.java.html
 /pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.html
 /pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/index.source.html
+/pandora-data/target/classes/.reloadtrigger
+/pandora-manager/.classpath
+/pandora-manager/.factorypath
+/pandora-manager/.project
+/pandora-manager/.settings/org.eclipse.core.resources.prefs
+/pandora-manager/.settings/org.eclipse.jdt.apt.core.prefs
+/pandora-manager/.settings/org.eclipse.jdt.core.prefs
+/pandora-manager/.settings/org.eclipse.m2e.core.prefs
+/pandora-manager/.settings/org.springframework.ide.eclipse.prefs
+/pandora-manager/target/checkstyle-cachefile
+/pandora-manager/target/checkstyle-checker.xml
+/pandora-manager/target/checkstyle-result.xml
+/pandora-manager/target/maven-archiver/pom.properties
+/pandora-manager/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/pandora-manager/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/pandora-manager/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/pandora-manager/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/pandora-manager/target/pandora-manager-0.0.1-SNAPSHOT.jar.original
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/PandoraWeb.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora/PandoraWeb.java.html
+/pandora-web/target/surefire-reports/2023-11-10T08-42-48_603-jvmRun1.dump
+/pandora-web/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.PandoraWebTests.xml
+/pandora-web/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.PandoraWebTests.txt
