--- a/pandora-calculation/src/main/resources/application.properties
+++ b/pandora-calculation/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9001
 
-spring.config.name=application,integrator,physics-constraints,species
+spring.config.name=application,integrator,physics-constraints,species,parameters
