--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 		<dependency>
 			<groupId>com.general.utils</groupId>
 			<artifactId>docker-utils</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 	
 	</dependencies>
