--- a/pandora-calculation/src/main/resources/integrator.properties
+++ b/pandora-calculation/src/main/resources/integrator.properties
@@ -4,5 +4,5 @@ integrator.nonstiff.params.maxStep=1
 integrator.nonstiff.params.absoluteTolerance=1e-10
 integrator.nonstiff.params.relativeTolerance=1e-10
 
-pandora.timestep.unit=month
+pandora.timestep.unit=year
 pandora.timestep.length=1
