TestCase for DateTimeList Month Coverage.

--- a/pandora-calculation/src/main/resources/test.properties
+++ b/pandora-calculation/src/main/resources/test.properties
@@ -6,7 +6,7 @@ integrator.nonstiff.params.maxStep=1
 integrator.nonstiff.params.absoluteTolerance=1e-10
 integrator.nonstiff.params.relativeTolerance=1e-10
 
-pandora.timestep.unit=year
+pandora.timestep.unit=month
 pandora.timestep.length=1
 timestep.length = 1
 timestep.unit = year
