PANDORA-133: update docker-utils to 0.0.4

--- a/.gitignore
+++ b/.gitignore
@@ -777,3 +777,19 @@ mvnw.cmd
 /pandora-web/target/surefire-reports/2023-11-10T08-42-48_603-jvmRun1.dump
 /pandora-web/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.PandoraWebTests.xml
 /pandora-web/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.PandoraWebTests.txt
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/DatabasesServiceController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/DatabasesServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/IndexController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/IndexController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/ReportsServiceController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/ReportsServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.source.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/DatabasesServiceController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/DatabasesServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/IndexController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/IndexController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/ReportsServiceController.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/ReportsServiceController.java.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.html
+/pandora-web/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.controllers/index.source.html
