TestCase for DateTimeList Month Coverage.

--- a/pandora-calculation/src/main/resources/test.properties
+++ b/pandora-calculation/src/main/resources/test.properties
@@ -9,7 +9,7 @@ integrator.nonstiff.params.relativeTolerance=1e-10
 pandora.timestep.unit=month
 pandora.timestep.length=1
 timestep.length = 1
-timestep.unit = year
+timestep.unit = month
 water.density=1
 water.dynamic.viscosity=0.001
 g=9.8
