--- a/pandora-calculation/src/main/resources/test1.properties
+++ b/pandora-calculation/src/main/resources/test1.properties
@@ -6,10 +6,10 @@ integrator.nonstiff.params.maxStep=1
 integrator.nonstiff.params.absoluteTolerance=1e-10
 integrator.nonstiff.params.relativeTolerance=1e-10
 
-pandora.timestep.unit=year
+pandora.timestep.unit=month
 pandora.timestep.length=1
 timestep.length = 1
-timestep.unit = year
+timestep.unit = month
 water.density=1
 water.dynamic.viscosity=0.001
 g=9.8
