--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
 			<artifactId>docker-utils</artifactId>
 			<version>0.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.general.utils</groupId>
+			<artifactId>object-utils</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.general.utils</groupId>
+			<artifactId>json-utils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
