PANDORA-125: upgrade json-utils version

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.general.utils</groupId>
 			<artifactId>json-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.2</version>
 		</dependency>
 		
 	</dependencies>
