--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>com.general.utils</groupId>
 			<artifactId>object-utils</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.general.utils</groupId>
