PANDORA-141: trying to get it to work

--- a/pandora-web/pom.xml
+++ b/pandora-web/pom.xml
@@ -85,7 +85,7 @@
 				<version>${mvn-checkstyle-plugin.version}</version>
 				<executions>
 					<execution>
-						<id>checkstyle-validate</id>
+						<id>validate</id>
 						<phase>validate</phase>
 						<configuration>
 							<configLocation>../pandora-style/sun_checks.xml</configLocation>
