--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.general</groupId>
 		<artifactId>spring-parent-pom</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.0.4</version>
 	</parent>
 
 	<groupId>com.science.earth.biogeochemistry.freshwaters</groupId>
