PANDORA-157: use full functionality of sonarcloud

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - checkout
       - run: mvn -s .circleci/settings.xml -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
+      - run: mvn package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=WJ-van-Hoek_PANDORA
       - run: bash <(curl -s https://codecov.io/bash)
 
       - store_test_results:
@@ -25,3 +26,5 @@ workflows:
   build-and-test:
     jobs:
       - build
+
+
