--- a/pandora-calculation-rest-api/pom.xml
+++ b/pandora-calculation-rest-api/pom.xml
@@ -46,7 +46,6 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.10</version>
 				<executions>
 					<execution>
 						<goals>
@@ -55,7 +54,7 @@
 					</execution>
 					<execution>
 						<id>report</id>
-						<phase>prepare-package</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
@@ -69,27 +68,6 @@
 					<reportOutputDirectory>
 						${project.basedir}/../docs/pandora-calculation-rest-api</reportOutputDirectory>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${mvn-checkstyle-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>checkstyle-validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>../pandora-style/sun_checks.xml</configLocation>
-							<suppressionsLocation>../pandora-style/suppressions.xml</suppressionsLocation>
-							<encoding>UTF-8</encoding>
-							<failOnViolation>true</failOnViolation>
-							<includeTestSourceDirectory>true</includeTestSourceDirectory>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
