PANDORA-123: all javadocs

--- a/pandora-calculation-utilities/pom.xml
+++ b/pandora-calculation-utilities/pom.xml
@@ -37,6 +37,43 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>delombok</goal>
+						</goals>
+						<configuration>
+							<addOutputDirectory>false</addOutputDirectory>
+							<sourceDirectory>src/main/java</sourceDirectory>
+							<outputDirectory>
+								${project.build.directory}/delombok
+							</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<sourcepath>${project.build.directory}/delombok</sourcepath>
+					<reportOutputDirectory>
+						${project.basedir}/../docs/pandora-calculation-utilities</reportOutputDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
